--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,41 @@
 
 	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-firestore.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+	</script>
+	<link rel="stylesheet" href="styles.css">
 	<script src="firebase-handler.js"></script>
 	<script src="/app.js" defer></script>
 </head>
+
 <body>
-	<form>
-		<div class="form_div">
-			<div class="person_register">
-				<label for="name">name</label><br>
-				<input type="text" id="name"><br>
+	<h1 id="rediger"></h1>
+	<div class="d-flex align-items-center justify-content-center">
+		<form>
+			<div>
+				<h1 class="signIn h1 mb-3 font-weight-normal">Please enter your name here: </h1><hr><br>
+				<div class="inputDiv">
+					<input type="text" id="name" required autofocus><br><br>
+					<button class="submitButton btn btn-lg btn-primary btn-block" value="add" type="submit">Sign in</button>
+				</div>
 			</div>
-		</div>
-		<input type="submit" value="add">
-	</form>
-	<ul>
-	</ul>
+		</form>
+	</div>
+
+	<div class="centeredBox d-flex align-items-center justify-content-center">
+		<h1>ditt lykketall dette minuttet:</h1>
+		<h1 id="lykketall"></h1>
+	</div>
+	<hr>
+
+	<h2 class="listText">All our users:</h2>
+	<div>
+		<ul class="userList">
+		</ul>
+	</div>
 </body>
+
 </html>
