--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		</form>
 	</div>
 
-	<div class="centeredBox d-flex align-items-center justify-content-center">
-		<h1>ditt lykketall dette minuttet:</h1>
+	<div class="alert alert-danger centeredBox d-flex align-items-center justify-content-center">
+		<h1>Ditt lykketall dette minuttet:</h1>
 		<h1 id="lykketall"></h1>
 	</div>
 	<hr>
