--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</script>
 	<link rel="stylesheet" href="/styles.css">
 	<script src="/firebase-handler.js"></script>
-	<script src="/app.js" defer></script>
+	<script src="app.js" defer></script>
 </head>
 
 <body>
