--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
 	</script>
 	<link rel="stylesheet" href="/styles.css">
-	<script src="/firebase-handler.js"></script>
+	<script src="/firebase-handler.js" defer></script>
 	<script src="app.js" defer></script>
 </head>
 
